--- a/akhir_mostagat/main/hom.html
+++ b/akhir_mostagat/main/hom.html
@@ -7,9 +7,9 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <title>ESTS</title>
 	    <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="C:\Users\user\Desktop\main\css\bootstrap.min.css">
+        <link rel="stylesheet" href="css\bootstrap.min.css">
 	    <!----css3---->
-        <link rel="stylesheet" href="C:\Users\user\Desktop\main\css\custom.css">
+        <link rel="stylesheet" href="css\custom.css">
 		
 		
 		<!--google fonts -->
