--- a/akhir_mostagat/main/profile.html
+++ b/akhir_mostagat/main/profile.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <title>ESTS</title>
-        <link rel="stylesheet" href="C:\Users\T-Info\Desktop\akhir_mostagat\css\bootstrap.min.css">
+        <link rel="stylesheet" href="css\bootstrap.min.css">
 	    <!----css3---->
-        <link rel="stylesheet" href="C:\Users\T-Info\Desktop\akhir_mostagat\css\custom.css">
+        <link rel="stylesheet" href="css\custom.css">
         
 		
 		<!--google fonts -->
@@ -20,8 +20,8 @@
 	
 	   <!--google material icon-->
       <link href="https://fonts.googleapis.com/css2?family=Material+Icons"rel="stylesheet">
-      <link rel="stylesheet" href="C:\Users\T-Info\Desktop\akhir_mostagat\main\fiche.css">
-      <link rel="stylesheet" href="C:\Users\T-Info\Desktop\akhir_mostagat\main\profile.css">
+      <link rel="stylesheet" href="]main\fiche.css">
+      <link rel="stylesheet" href="main\profile.css">
   </head>
   <body>
   
@@ -142,7 +142,7 @@
 							   
 							   <li class="dropdown nav-item">
                                 <a class="nav-link" href="#" data-toggle="dropdown">
-									<img src="C:\Users\user\Desktop\main\main\icon.jpg" style="width: 40px; height: 40px; object-fit: cover; border-radius: 50%;" />
+									<img src="main\icon.jpg" style="width: 40px; height: 40px; object-fit: cover; border-radius: 50%;" />
 								  </a>
                                     <ul class="dropdown-menu small-menu">
                                        <li><a href="index.html">
@@ -198,7 +198,7 @@
                                                                 <div class="tab-pane fade active show" id="account-general">
                                                                     <div class="card-body media align-items-center">
                                                                         <div id="imagePreviewContainer" class="image-container">
-                                                                            <img src="C:\Users\user\Desktop\main\main\icon.jpg" alt="User Avatar" class="user-avatar rounded-circle">
+                                                                            <img src="main\icon.jpg" alt="User Avatar" class="user-avatar rounded-circle">
 
                                                                         </div>
                                                                         <div class="media-body ml-4">
@@ -372,12 +372,11 @@
                             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
                             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-			   <script src="C:\Users\T-Info\Desktop\akhir_mostagat\js\jquery-3.3.1.slim.min.js"></script>
-			   <script src="C:\Users\T-Info\Desktop\akhir_mostagat\js\popper.min.js"></script>
-			   <script src="C:\Users\T-Info\Desktop\akhir_mostagat\js\bootstrap.min.js"></script>
-			   <script src="C:\Users\T-Info\Desktop\akhir_mostagat\js\jquery-3.3.1.min.js"></script>
-			   <script src="C:\Users\T-Info\Desktop\akhir_mostagat\js\list.js"></script>
-  
+			  <script src="js\jquery-3.3.1.slim.min.js"></script>
+			   <script src="js\popper.min.js"></script>
+			   <script src="js\bootstrap.min.js"></script>
+			   <script src="js\jquery-3.3.1.min.js"></script>
+			   <script src="js\list.js"></script>
   
   <script type="text/javascript">
        $(document).ready(function(){
